# huilin_CogniForge

./: .gitignore  .yamllint.yml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  install.ps1  install.sh  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
coastal/: cli.py
coastal/engine/: core.py
engine/: __init__.py  analyzer.py  compiler.py  evolution.py
