[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coastal-console"
version = "0.1.0"
description = "CogniForge 可生长知识引擎 - 基于DNA四维分析思想的自进化知识管理系统"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "jinja2>=3.1.0",
    "pymupdf>=1.23.0",
    "markdown>=3.4.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
    "bandit>=1.7",
    "pre-commit>=3.0",
]
docker = [
    "docker>=6.0",
]
ai = [
    "openai>=1.3.0",
    "sentence-transformers>=2.2.0",
    "spacy>=3.7.0",
]
db = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "redis>=5.0.0",
    "chromadb>=0.4.0",
]
knowledge = [
    "rdflib>=7.0.0",
    "networkx>=3.0",
]
all = [
    "coastal-console[dev,ai,db,knowledge]",
]

[project.scripts]
coastal = "coastal.cli:app"

[project.urls]
Homepage = "https://github.com/chene2603-cmd/huilin_CogniForge"
Repository = "https://github.com/chene2603-cmd/huilin_CogniForge.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["coastal*", "engine*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"